test/tests/stages/18_structures/invalid_types/scalar_required/compare_structs.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  struct
  identifier(s)
  identifier(y)
  =
  {
  const int(2)
  }
  ;
  return
  identifier(x)
  ==
  identifier(y)
  ;
  }
